[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Guns/img_pistol.png" type="Texture" id=1]
[ext_resource path="res://Scripts/objLoot.gd" type="Script" id=2]
[ext_resource path="res://Assets/img_lootDrop.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="objLoot" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="shapeLoot" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="texLoot" type="TextureRect" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBox" type="TextureRect" parent="texLoot"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerLoot" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="twnFlash" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true
[connection signal="timeout" from="timerLoot" to="." method="_on_timerLoot_timeout"]
